--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -128,14 +128,18 @@
 
 .small-avatar {
   position: absolute;
-  bottom: -10px;
-  left: -10px;
+  bottom: 0;
+  left: 0;
   width: 34px;
   height: 34px;
   border-radius: 50%;
   border: 3px solid white;
   overflow: hidden;
+  background: white;
+  transform: translate(-30%, 30%);
+  z-index: 10;
 }
+
 
 .msg-title { font-size: 17px; font-weight: 600; }
 .msg-sub { font-size: 14px; color: #666; }
